# mapi

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  configure  configure.ac
po/: .gitignore  POTFILES.in  mapi.pot  ru.gmo  ru.po
src/: .gitignore  Makefile.am  Makefile.in  config.h.in  main.cpp  mapi.h
